--- a/pages/posts/2024-04-15-博客重启.md
+++ b/pages/posts/2024-04-15-博客重启.md
@@ -24,7 +24,7 @@ tags:
 
 之后硬盘完全无法读取。使用Diskinfo检测得到以下结果：
 
-![diskinfo](https://s21.ax1x.com/2024/04/15/pFvwq4P.jpg)
+![diskinfo](https://s21.ax1x.com/2024/04/15/pFvqytI.jpg)
 
 寄。
 
