--- a/pages/posts/2024-04-29-re-英汉词典.md
+++ b/pages/posts/2024-04-29-re-英汉词典.md
@@ -3,7 +3,7 @@ layout: post
 title: re:英 汉 词 典
 date: 2024-04-29 21:49:00
 excerpt_type: html  # <!-- more -->标签渲染方式
-updated: 2024-05-05
+updated: 2024-05-16
 categories: 英汉词典
 tags:
   - 英语
@@ -47,6 +47,8 @@ tags:
 
 前缀：prefix `[ˈpriːfɪks]`(n.)。此外可以作vt.表示为……添加前缀。注意读音是`/'pri-/`而非`/'pre-/`，以及注意重音在第一个音节。
 
+剩余：remain(n.)，此外做动词可以翻译为留下、逗留、保持等。
+
 utility：实用，实用程序，效用(n.)；多用途的，多功能的(adj.)
 
 fragile：脆弱的（特指经济、生态环境等）、易碎的(adj.)
@@ -77,4 +79,6 @@ deprecated：不赞成（被使用的方法或者数据结构，如Java中的Sta
 
 diagonal：对角线、斜线（n.）；对角线的，斜线的（adj.）
 
-a diagonal line：一条斜的线
+>a diagonal line：一条斜的线
+
+
