--- a/pages/posts/2024-05-13-力扣1553.吃掉N个橘子的最少天数.md
+++ b/pages/posts/2024-05-13-力扣1553.吃掉N个橘子的最少天数.md
@@ -4,7 +4,7 @@ title: 力扣1553.吃掉N个橘子的最少天数
 date: 2024-05-13 09:17:44
 excerpt_type: html  # <!-- more -->标签渲染方式
 updated: 2024-05-13
-categories: 算法记录
+categories: 力扣好题记录
 tags:
   - Java
   - 算法
@@ -17,6 +17,8 @@ tags:
 [1553.吃掉N个橘子的最少天数](https://leetcode.cn/problems/minimum-number-of-days-to-eat-n-oranges/?envType=daily-question&envId=2024-05-12)
 
 一眼dp，随手写了一个提交，爆内存，然后发现数据范围是`1 <= n <= 2*10^9`。
+
+<!-- more -->
 
 看了一下提示，考虑dfs递归。最初写出来的形式是`return min(f(m-1), f(m/2), f(m/3))`这样。但是由于f(m-1)的存在，所以还是相当于每一个数字都会遍历一遍，而这题O(n)是过不了的，因此需要将这一项优化掉。
 
