--- a/pages/posts/2024-05-16-力扣2589.完成所有任务的最少时间.md
+++ b/pages/posts/2024-05-16-力扣2589.完成所有任务的最少时间.md
@@ -8,7 +8,7 @@ categories: 力扣好题记录
 tags:
   - Java
   - 算法
-  - dfs
+  - 贪心
   - 力扣
 ---
 
@@ -17,6 +17,8 @@ tags:
 [2589.完成所有任务的最少时间](https://leetcode.cn/problems/minimum-time-to-complete-all-tasks/description/?envType=daily-question&envId=2024-05-15)
 
 毫无头猪的困难题
+
+<!-- more -->
 
 虽然能够想到先排个序，但是没有想到是根据区间右端点排序。之所以按照右端点排序可能是因为在所选贪心规则中，需要新开辟的运行时间范围要尽量往后放。（往左放应该也可以，那样就按照左端点排序然后倒序遍历）
 
