20240709，修改以前文章的标题，并且新增文章

--- a/pages/posts/2024-05-18-力扣402.移掉K位数字.md
+++ b/pages/posts/2024-05-18-力扣402.移掉K位数字.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2024-05-18-力扣402.移掉K位数字
+title: 力扣402.移掉K位数字
 date: 2024-05-18 20:07:18
 excerpt_type: html  # <!-- more -->标签渲染方式
 updated: 2024-05-18
