--- a/pages/posts/2024-05-20-力扣1542.找出最长的超赞字符串.md
+++ b/pages/posts/2024-05-20-力扣1542.找出最长的超赞字符串.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2024-05-20-力扣1542.找出最长的超赞字符串
+title: 力扣1542.找出最长的超赞字符串
 date: 2024-05-20 16:57:20
 excerpt_type: html  # <!-- more -->标签渲染方式
 updated: 2024-05-20
