--- a/pages/posts/2024-06-13-力扣2813.子序列最大优雅度.md
+++ b/pages/posts/2024-06-13-力扣2813.子序列最大优雅度.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2024-06-13-力扣2813.子序列最大优雅度
+title: 力扣2813.子序列最大优雅度
 date: 2024-06-13 10:59:24
 excerpt_type: html  # <!-- more -->标签渲染方式
 updated: 2024-06-13
