--- a/pages/posts/2024-05-16-力扣2589.完成所有任务的最少时间.md
+++ b/pages/posts/2024-05-16-力扣2589.完成所有任务的最少时间.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2024-05-16-力扣2589.完成所有任务的最少时间
+title: 力扣2589.完成所有任务的最少时间
 date: 2024-05-16 09:44:10
 excerpt_type: html  # <!-- more -->标签渲染方式
 updated: 2024-05-16
