--- a/pages/posts/2024-06-04-力扣3067.在带权树网络中统计可连接服务器对数目.md
+++ b/pages/posts/2024-06-04-力扣3067.在带权树网络中统计可连接服务器对数目.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2024-06-04-力扣3067.在带权树网络中统计可连接服务器对数目
+title: 力扣3067.在带权树网络中统计可连接服务器对数目
 date: 2024-06-04 19:19:11
 excerpt_type: html  # <!-- more -->标签渲染方式
 updated: 2024-06-04
