--- a/pages/posts/2024-07-09-曼哈顿距离和切比雪夫距离.md
+++ b/pages/posts/2024-07-09-曼哈顿距离和切比雪夫距离.md
@@ -1,5 +1,4 @@
 ---
-
 layout: post
 title: 曼哈顿距离和切比雪夫距离
 date: 2024-07-09 11:06:05
@@ -22,6 +21,8 @@ tags:
 $$
 d(A, B)=|x_1-x_2|+|y_1-y_2|
 $$
+
+<!-- more -->
 
 [参考资料：oi-wiki](https://oi-wiki.org/geometry/distance/#%E6%9B%BC%E5%93%88%E9%A1%BF%E8%B7%9D%E7%A6%BB)
 
